--- a/web/eXoSkinMac/src/main/webapp/skin/MacSkin/portal/webui/component/view/UIPage/Stylesheet.css
+++ b/web/eXoSkinMac/src/main/webapp/skin/MacSkin/portal/webui/component/view/UIPage/Stylesheet.css
@@ -9,11 +9,6 @@
   padding: 0px;
 }
 
-.UIPage .PageLayoutDecorator .MiddlePageBG {
-  background: url('background/Pagebackground1x111.gif') repeat-x center ;
-  height: 90px;
-}
-
 .UIPage .PageLayoutDecorator .TopLeftPage {
   background: url('background/TopLeftPageLayout142x114.png') no-repeat left ;
   padding: 0px 0px 0px 142px ;
@@ -31,6 +26,10 @@
   background: url('background/TopMiddlePageLayout1x114.png') repeat-x center ;  
 }
 
+.UIPage .PageLayoutDecorator .TopCenterPage .PageContent {
+	height: 104px;
+}
+
 .UIPage .PageLayoutDecorator .MiddleLeftPage {
   background: url('background/MiddleLeftPageLayout12x1.png') repeat-y left ;
   padding: 0px 0px 0px 12px ; 
@@ -41,8 +40,17 @@
   padding: 0px 13px 0px 0px ;
 }
 
+.UIPage .PageLayoutDecorator .MiddlePageBG {
+  background: url('background/Pagebackground1x111.gif') repeat-x center ;
+}
+
+.UIPage .PageLayoutDecorator .MiddlePageBG .FixBug {
+	height: 90px;
+}
+
 .UIPage .PageLayoutDecorator .PageContent {
   padding: 6px 10px 0px 10px; 
+  height: 104px;
 }
 
 .UIPage .PageLayoutDecorator .BottomLeftPage {
