--- a/web/eXoSkinMac/src/main/webapp/skin/MacSkin/webui/component/UIWizard/Stylesheet.css
+++ b/web/eXoSkinMac/src/main/webapp/skin/MacSkin/webui/component/UIWizard/Stylesheet.css
@@ -82,10 +82,6 @@
 	padding: 10px;
 }
 
-.UIWizard .UIWizardContent .WizardStepContent .UISearchI18n .UIForm {
-	padding: 0px;
-}
-
 .UIWizard .UIWizardContent .WizardControlBar {
   height: 34px;
   border: solid 1px #b7b7b7;
@@ -161,7 +157,12 @@
 /*========================== Start UIWizard Step1 ==============================*/
 .UIWizard .UIContainerConfigOptions .UIDropDownControl {
 	width: 217px;
+	position: static;
 	margin-bottom: 2px;
+}
+
+.UIWizard .UIContainerConfigOptions .UIDropDownControl .UIDropDownAnchor {
+	width: 217px;
 }
 
 /*========================== Start UIWizard Step2 ==============================*/
@@ -286,7 +287,7 @@
 	height: 205px;
 	overflow-y: auto;
 	overflow-x: hidden;
-
+	width: 213px;
 }
 
 .UIWizard .LAYOUT-PAGE {
